--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,16 @@ img, div, section {
 
 @media(max-width:768px){
     header{
-        /* this is temporary fix but is it good enought?*/
-        padding-left: 60px;
-        text-align: center;
+        display: flex;     
+        justify-content: space-between;
+        align-items: center; 
+        padding: 0 30px;
     }
     nav{
         position: static;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;  
     }
     nav ul{
         display: none;
@@ -120,10 +124,16 @@ img, div, section {
         text-decoration: none; 
         width: 20%;
     }
-    *{
-        /* this part is causing the issue */       
+    .contentLeft{
+        padding-right: 30px;
         width: 100%;
-        grid-template-columns: 1fr;
-        grid-template-rows: 100px auto auto 100px;
+    }
+    main{
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    *{
+        width: 100%;
     }
 }
